<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#353a41">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/room_large_screen"
            android:textColor="#999"
            android:textSize="30sp" />

        <com.bestarmedia.libwidget.image.RecyclerImageView
            android:id="@+id/iv_back"
            android:layout_width="114dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/service_setting_back" />

        <View
            android:layout_width="2dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:background="#666666" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_screen_ip"
                />
            <EditText
                android:id="@+id/et_large_screen_ip"
                android:layout_marginLeft="20dp"
                android:hint="@string/large_screen_ip_tips"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_screen_port"
                />
            <EditText
                android:id="@+id/et_large_screen_port"
                android:layout_marginLeft="20dp"
                android:hint="@string/large_screen_port_tips"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
               <Button
                   android:id="@+id/btn_large_screen_ok"
                   android:layout_gravity="center"
                   android:layout_marginTop="30dp"
                   android:layout_width="100dp"
                   android:layout_height="wrap_content"
                   android:text="@string/ok"
                   />
    </LinearLayout>

</RelativeLayout>