<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="650dp"
    android:layout_height="700dp"
    android:background="@drawable/dlg_bg">

        <TextView
            android:id="@+id/dlg_request_offline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_safety_request_offline_operation_title"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_title_text_size"
            />
        <TextView
            android:id="@+id/dlg_request_offline_conntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dlg_safety_request_offline_operation_tips"
            android:layout_below="@+id/dlg_request_offline_title"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            />

    <com.beidousat.karaoke.widget.WidgetKeyboard
        android:id="@+id/keyboard"
        android:layout_width="@dimen/keyboard_width_land"
        android:layout_height="@dimen/keyboard_height_land"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dlg_request_offline_conntent"
        android:layout_above="@+id/lin_request_offline_bottom"
        android:layout_marginTop="10dp"
        app:keyboard_input_hint="@string/dlg_safety_input_tips" />

    <LinearLayout
        android:id="@+id/lin_request_offline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:id="@+id/dlg_request_offline_cancle"
            android:layout_width="180dp"
            android:height="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="取消"
            android:gravity="center"
            android:textColor="@color/dlg_button_text_color"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/selector_dlg_button_nomal"
            />
        <TextView
            android:id="@+id/dlg_request_offline_ok"
            android:layout_width="180dp"
            android:height="40dp"
            android:layout_height="wrap_content"
            android:text="确定申请"
            android:gravity="center"
            android:textColor="@color/dlg_button_gradient_text_color"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/selector_dlg_button_gradient"
            />
    </LinearLayout>
</RelativeLayout>